Fixing overflow on related content lists

--- a/admin/assets/less/related-content.less
+++ b/admin/assets/less/related-content.less
@@ -36,9 +36,8 @@
 		padding: 0;
 		margin: 0;
 
-		.ui-draggable .navZoom {
-			max-width: 95%;
-			//.text-overflow;
+		.navZoom {
+			max-width: 95% !important;
 			
 			li {
 				white-space: nowrap;
